# xwmodels

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  pyproject.xwentity.toml  pyproject.xwmodels.toml  pytest.ini  requirements.txt  upload.bat
.github/: workflows-config.yaml
.github/workflows/: publish.yml
docs/: GUIDE_01_USAGE.md  INDEX.md  PUBLISH_FIX_LARGE_FILES.md  REF_01_REQ.md  REF_12_IDEA.md  REF_13_ARCH.md  REF_14_DX.md  REF_15_API.md  REF_21_PLAN.md  REF_22_PROJECT.md  REF_35_REVIEW.md  REF_51_TEST.md
docs/_archive/: BEAUTIFUL_USER_ENTITY.md  MIGRAT_FEATURE_VERIFICATION.md  PROJECT_PHASES.md  STANDALONE_REFACTOR.md  XWENTITY_STORAGE_SEPARATION_PROPOSAL.md  XWSTORAGE_XWJSON_CONNECTOR_PROPOSAL.md  XWSYSTEM_FORMAT_TYPES.md
docs/changes/: EXAMPLES_VERIFIED.md  FEATURES_IMPLEMENTED.md  REFACTORING_NO_DUPLICATION.md  VERIFICATION_REPORT.md
docs/logs/reviews/: REVIEW_20260207_PROJECT_STATUS.md
src/: xwentity.py  xwmodels.py
src/exonware/xwmodels/: __init__.py  base.py  cache.py  collection.py  config.py  contracts.py  defs.py  enhanced.py  entity_compat.py  errors.py  facade.py  group.py  metaclass.py  version.py
src/exonware/xwmodels/auth/: __init__.py  base.py  contracts.py
src/exonware/xwmodels/common/: relationships.py
src/exonware/xwmodels/common/lifecycle/: __init__.py  contracts.py  manager.py
src/exonware/xwmodels/common/relationships/: enhanced.py
src/exonware/xwmodels/entities/: __init__.py
src/exonware/xwmodels/entities/baas/: __init__.py  billing.py  projects.py
src/exonware/xwmodels/storage/: __init__.py  base.py  contracts.py  file_storage.py  integration.py
tests/: __init__.py  conftest.py  runner.py  verify_installation.py
tests/0.core/: conftest.py  runner.py  test_examples.py  test_format_conversion.py  test_import.py  verify_examples_accuracy.py
tests/1.unit/: debug_test.py  simple_test.py  test_action_validation.py  test_cache.py  test_collection_group.py  test_entity.py  test_extensions.py  test_factory_methods.py  test_metaclass.py  test_new_architecture.py  test_new_features.py  test_performance.py  test_user_entity.py
tests/2.integration/: test_end_to_end.py
tests/3.advance/: __init__.py  runner.py  test_performance_caching.py  test_security.py
