
# Source size (src/*): ~219.6 KB
[build-system]
  requires = ["hatchling"]
  build-backend = "hatchling.build"

[project]
  name = "exonware-xwmodels"
dynamic = ["version"]
  description = "Collections and Groups with provider support for auth and storage"
  readme = "README.md"
  requires-python = ">=3.12"
  keywords = ["collections", "groups", "models", "organization", "exonware"]
  classifiers = []
  dependencies = [
    "exonware-xwsystem==0.9.0.39",
    "exonware-xwdata==0.9.0.17",
    "exonware-xwaction==0.9.0.12",
    "exonware-xwentity==0.6.0.11",
    "exonware-xwschema==0.4.0.12",
    "exonware-xwnode==0.9.0.25",
  ]
  authors = [{ name = "eXonware Backend Team", email = "connect@exonware.com" }]

  [project.license]
    text = "Apache-2.0"

  [project.optional-dependencies]
    # First-party XW libs composed by this package (excludes exonware-xwsystem==0.9.0.37; see lazy/full).
    xw = [
      "exonware-xwaction==0.9.0.12",
      "exonware-xwdata==0.9.0.17",
      "exonware-xwentity==0.6.0.11",
      "exonware-xwschema==0.4.0.12",
      "exonware-xwnode==0.9.0.25",
    ]
    lazy = [
      "exonware-xwmodels[xw]==0.6.0.12",
      "exonware-xwlazy==1.0.1.81",
      "exonware-xwsystem[lazy]==0.9.0.39",
      "exonware-xwaction[xw]==0.9.0.12",
      "exonware-xwdata[xw]==0.9.0.17",
      "exonware-xwentity[xw]==0.6.0.11",
      "exonware-xwschema[xw]==0.4.0.12",
      "exonware-xwnode[xw]==0.9.0.25",
    ]
    full = [
      "exonware-xwmodels[xw]==0.6.0.12",
      "exonware-xwsystem[full]==0.9.0.39",
      "exonware-xwaction[xw]==0.9.0.12",
      "exonware-xwdata[xw]==0.9.0.17",
      "exonware-xwentity[xw]==0.6.0.11",
      "exonware-xwschema[xw]==0.4.0.12",
      "exonware-xwnode[xw]==0.9.0.25",
      "cachebox",
      "brotli",
    ]
    dev = [
      "exonware-xwmodels[full]==0.6.0.12",
      "black>=23.0.0",
      "isort>=5.12.0",
      "mypy>=1.0.0",
      "pytest>=7.0.0",
      "pytest-asyncio>=0.21.0",
      "pytest-cov>=4.0.0",
    ]

  [project.urls]
    Homepage = "https://exonware.com"
    Documentation = "https://github.com/exonware/xwmodels#readme"
    Repository = "https://github.com/exonware/xwmodels"

# Mirror push: use a single-tree snapshot so GitHub never sees historical >100MB blobs
# (e.g. removed examples/social_media_example/*.data.json) in subtree split or standalone HEAD push.
[tool.exonware.upload]
  subtree_push_mode = "snapshot"

[tool]

  [tool.black]
    line-length = 88
    target-version = ["py312"]

  [tool.isort]
    profile = "black"
    line_length = 88

  [tool.mypy]
    python_version = "3.12"
    strict = true
    warn_return_any = true
    warn_unused_configs = true
    disallow_untyped_defs = true
    disallow_any_generics = true
    disallow_untyped_calls = true
    disallow_incomplete_defs = true
    check_untyped_defs = true
    disallow_untyped_decorators = true
    no_implicit_optional = true
    warn_redundant_casts = true
    warn_unused_ignores = true
    warn_no_return = true
    warn_unreachable = true

  [tool.pytest]

    [tool.pytest.ini_options]
      testpaths = ["tests"]
      python_files = ["test_*.py"]
      python_classes = ["Test*"]
      python_functions = ["test_*"]
      addopts = "-v --tb=short"
      markers = [
        "xwmodels_core: core-layer tests",
        "xwmodels_unit: unit tests",
        "xwentity_advance: advance / optional benchmark layer",
        "xwentity_security: security-focused advance tests",
        "xwentity_performance: performance-focused advance tests",
      ]

  [tool.hatch]

    [tool.hatch.version]
      path = "src/exonware/xwmodels/version.py"

    [tool.hatch.build]

      [tool.hatch.build.targets]

        [tool.hatch.build.targets.wheel]
          packages = ["src/exonware"]
          py-modules = ["src/xwmodels"]

        [tool.hatch.build.targets.sdist]
          include = ["/src", "/tests", "/README.md", "/.github"]
